--- a/webpages/src/css/userView.css
+++ b/webpages/src/css/userView.css
@@ -1,6 +1,6 @@
 :root {
-  --text: #fff;
-  --primary: #403f4c;
+  --text: #202020;
+  --primary: #fcfcfc;
   --secondary: #348aa7;
   --background: #e8e5e5;
   --tertiary: #246b82;
@@ -11,7 +11,8 @@
 * {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body,
@@ -32,10 +33,10 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 30px;
-  background-color: var(--secondary);
+  height: 60px;
+  padding: 0 20px;
+  background-color: #202020;
   color: var(--background);
-  border-bottom: 5px solid var(--tertiary);
 }
 
 .dashboard {
@@ -44,37 +45,50 @@ html {
 }
 
 .sidebar {
-  width: 200px;
+  width: 280px;
   background-color: var(--primary);
   padding: 20px;
-  border-right: var(--tertiary) 2px solid;
+  border-right: #cacaca 1px solid;
 }
 
 .sidebar > div {
-  background-color: black;
-  color: var(--quaternary);
+  width: 100%;
+  color: #393939;
   display: block;
   align-items: center;
-  height: fit-content;
   border: 0;
   border-radius: 2.5%;
-  margin-bottom: 2.5vh;
+  margin-bottom: 4px;
+  position: relative;
+}
+
+.highlight {
+  background-color: #f82884;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 9999px;
+  text-align: center;
+  font-size: 12px;
 }
 
 .sidebar-toggle {
   display: flex;
   width: 100%;
-  padding:10px 0px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+  border-radius: 4px;
+  transition: all 200ms ease-in;
 }
 
 .sidebar-toggle:hover {
   cursor: pointer;
+  background-color: #eeeeee;
 }
 
 .sidebar-toggle p {
-  width: 80%;
-  margin: 0;
-  padding-left: 10px;
+  font-size: 16px;
 }
 
 .sidebar-toggle i {
@@ -86,46 +100,56 @@ html {
   list-style: none;
   padding: 0;
   margin: 0;
-  display: none; 
-  background-color: black;
-  color: white;
-  border-radius: 5px;
+  display: none;
+  top: 45px;
+  position: absolute;
+  background-color: #eeeeee;
+  border-radius: 0 0 5px 5px;
   padding-left: 20px;
+  z-index: 9999;
+  overflow: hidden;
 }
 
 .sidebar-dropdown-list.active {
-  display: block; 
+  z-index: 9999;
+  width: 100%;
+  display: block;
   padding: 0;
 }
 
+#projects {
+  background-color: #eeeeee !important;
+}
+
 .sidebar-dropdown-list li a {
-  color: var(--quaternary);
+  padding-left: 20px;
+  color: #393939;
   text-decoration: none;
   display: block;
+  padding: 16px;
+  border-top: 1px solid #cacaca;
 }
 
-.sidebar-dropdown-list a {
-  font-size: 15px;
-  padding: 10px 10px;
+.sidebar-dropdown-list li a::selection {
+  color: #393939;
+  background-color: transparent;
 }
 
-.sidebar-dropdown-list a>i {
+.sidebar-dropdown-list a > i {
   padding-right: 10px;
 }
 
 .sidebar-dropdown-list li a:hover {
-  background-color: var(--tertiary);
+  background-color: var(--background);
 }
 
 .main-content {
-  padding: 20px;
   border: none;
   flex-grow: 1;
   background-color: transparent;
 }
 
-img {
-  margin-left: 30px;
+.top-nav img {
   height: 50px;
   width: 50px;
 }
@@ -157,8 +181,6 @@ a:visited {
 }
 
 .navbar-list {
-  width: 100%;
-  text-align: right;
   padding-right: 2rem;
 }
 
@@ -168,7 +190,8 @@ a:visited {
 }
 
 .navbar-list li a {
-  font-size: 1rem;
+  color: #eeeeee;
+  font-size: 16px;
   font-weight: 500;
   text-decoration: none;
 }
@@ -185,11 +208,11 @@ a:visited {
   padding-right: 1rem;
   font-size: 0.9rem;
   font-weight: 500;
-  width: 150px;
+  width: 160px;
   border-radius: 50px;
-  color: var(--background);
+  color: #eeeeee;
   cursor: pointer;
-  border: 1px solid var(--secondary);
+  border: 1px solid #eeeeee;
   transition: box-shadow 0.2s ease-in, background-color 0.2s ease-in,
     border 0.3s;
 }
@@ -216,20 +239,26 @@ a:visited {
   margin-right: 0;
 }
 
+.profile-dropdown-btn span i {
+  margin-left: 8px;
+}
+
 .profile-dropdown-list {
   position: absolute;
-  top: 50px;
+  top: 51px;
   width: 200px;
-  right: 0;
-  background-color: var(--secondary);
-  border-radius: 30px;
+  right: 0%;
+  background-color: #202020;
+  border-radius: 0 0 8px 8px;
   max-height: 0;
   overflow: hidden;
   box-shadow: var(--shadow);
-  transition: max-height 0.5s ease;
+  transition: all 0.5s ease;
+  padding: 0;
 }
 
 .profile-dropdown-list.active {
+  padding: 20px;
   max-height: 400px;
 }
 
@@ -237,6 +266,7 @@ a:visited {
   padding: 0.3rem 0.5rem;
   text-align: left;
   transition: background-color 0.3s, padding-left 0.4s;
+  list-style-type: none;
 }
 
 .profile-dropdown-list-item a {
@@ -245,15 +275,14 @@ a:visited {
   text-decoration: none;
   font-size: 1rem;
   font-weight: 500;
-  color: var(--black);
+  color: #eeeeee;
 }
 
 .profile-dropdown-list-item a i {
   margin-right: 0.8rem;
   font-size: 1.1rem;
   height: 2.3rem;
-  background-color: var(--secondary);
-  color: var(--white);
+  color: #eeeeee;
   line-height: 2.3rem;
   text-align: center;
   margin-right: 1rem;
@@ -311,14 +340,15 @@ a:visited {
   margin-bottom: 10px;
 }
 
-#emailList span{
+#emailList span {
   display: inline-block;
   background-color: #e0e0e0;
   padding: 5px;
   margin-right: 5px;
   border-radius: 5px;
 }
-input[type="text"], input[type="submit"] {
+input[type="text"],
+input[type="submit"] {
   padding: 8px;
   margin-top: 5px;
 }
