--- a/webpages/src/css/projects.css
+++ b/webpages/src/css/projects.css
@@ -12,15 +12,9 @@
 }
 
 * {
-  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body,
-html {
-  background-color: var(--background);
 }
 
 .topbar {
@@ -30,80 +24,200 @@ html {
   padding: 16px;
 }
 
-.topbar .page-name p i {
+.topbar .page-name button i {
   text-align: center;
   display: inline-block;
   width: 20px;
   margin-right: 4px;
 }
 
-.topbar .page-name p {
+.topbar .page-name button {
   color: var(--text-2);
   font-weight: 500;
   font-size: 14px;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
-.dashboard {
-  width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
+.topbar .page-name button:hover {
+  cursor: pointer;
+}
+
+#projects {
   padding: 20px;
-}
-
-.container {
   display: flex;
-  flex-direction: row;
-  gap: 20px;
+  flex-direction: column;
+  gap: 12px;
 }
 
-.widget {
-  min-width: 30%;
-  min-height: 320px;
-  border: 1px solid var(--border-low);
-  border-radius: 12px;
-  padding: 24px;
-  box-shadow: 0 2px 8px var(--background-3);
-  transition: all 200ms ease;
+#projects h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  color: #202020;
 }
 
-.widget:hover {
-  border-color: var(--border-default);
+.project-item {
+  background-color: var(--background-3) !important;
+  padding: 20px;
+  border-radius: 8px;
 }
 
-.widget-nav {
-  width: 100%;
+.project-item * {
+  font-family: "Montserrat", sans-serif;
+}
+
+.project-details {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 }
 
-.widget-title {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  color: var(--text-2);
-}
-
-.widget-settings {
-  font-size: 16px;
+.project-name {
+  font-size: 18px;
   font-weight: 600;
-  line-height: 1.5;
   color: var(--text-2);
 }
 
-.widget-content {
+.project-contributors {
+  font-size: 18px;
+  font-weight: 300;
+  font-style: italic;
+  color: #2020209f;
+}
+
+.progress-text {
+  color: #2020209f;
+  font-weight: 600;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 18px;
+  background-color: var(--background-2);
+  border-radius: 9999px;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  padding-left: 3px;
+}
+
+.progress-child {
+  height: 12px;
+  background-color: var(--border-hover);
+  border-radius: 9999px;
+}
+
+.project-btn {
+  outline: none;
+  border: none;
+  font-weight: 600;
+  margin-top: 20px;
+  font-size: 16px;
+  color: #2020209f;
+  cursor: pointer;
+}
+
+.project-details-popup {
+  z-index: 9999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #00000090;
+  padding: 20px;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.widget-content h4 {
-  font-size: 44px;
-  font-weight: bold;
+#project-details-content {
+  background-color: var(--background);
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 80vw;
+}
+
+#project-details-actions {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.project-details-delete {
+  margin-top: 8px;
+  width: 100%;
+  padding: 8px 12px;
+  color: #ef473a;
+  background-color: #ef473a20;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+#project-details-close {
+  width: 15px;
+  height: 15px;
+  font-size: 10px;
+  background-color: #ef473a;
+  color: var(--background);
+  border-radius: 9999px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+#project-details-content p {
+  color: #2020209f;
+  font-weight: 600;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.hide {
+  display: none;
+}
+
+#project-details-content p:last-child {
+  margin-top: 20px;
+}
+
+.contributors-text {
+  position: relative;
+  left: 80%;
+  width: 20%;
+}
+
+#project-details-contributors {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin: 20px 0;
+}
+
+#project-details-contributors a {
+  font-size: 10px;
+  padding: 1%;
+  margin: 0% 1%;
+  border: 0;
+  border-radius: 5px;
+  background-color:#d6d9de;
+}
+
+#admin::after, #project-details-wrapper .progress-text::after, #own-tasks::after {
+  margin-top: 10px;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #adb3bd;
 }
