--- a/webpages/src/css/deadlines.css
+++ b/webpages/src/css/deadlines.css
@@ -186,3 +186,119 @@ h2 {
   line-height: 1.5;
   font-size: 16px;
 }
+
+.deadline-details-popup {
+  z-index: 9999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #00000090;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#deadline-details-content {
+  background-color: var(--background);
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 80vw;
+}
+
+#deadline-details-actions {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.deadline-details-delete {
+  margin-top: 8px;
+  width: 50%;
+  padding: 8px 12px;
+  padding-right: 5px;
+  color: #ef473a;
+  background-color: #ef473a20;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.deadline-details-complete {
+  margin-top: 8px;
+  width: 50%;
+  padding: 8px 12px;
+  color: #3aef4f;
+  background-color: #3aef5820;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+#deadline-details-close {
+  width: 15px;
+  height: 15px;
+  font-size: 10px;
+  background-color: #ef473a;
+  color: var(--background);
+  border-radius: 9999px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+#deadline-details-content p {
+  color: #2020209f;
+  font-weight: 600;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.hide {
+  display: none;
+}
+
+#deadline-details-content p:last-child {
+  margin-bottom: 20px;
+}
+
+.contributors-text {
+  justify-self: center;
+  position: relative;
+  /* left: 80%; */
+  width: 20%;
+}
+
+#deadline-details-contributors {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+#deadline-details-contributors a {
+  font-size: 10px;
+  padding: 1%;
+  margin: 0% 1%;
+  border: 0;
+  border-radius: 5px;
+  background-color:#d6d9de;
+}
+
+#deadline::after, #description::after {
+  margin-top: 10px;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #adb3bd;
+}
