--- a/webpages/src/css/projects.css
+++ b/webpages/src/css/projects.css
@@ -200,6 +200,7 @@
   width: 100%;
   display: flex;
   justify-content: end;
+  flex-direction: column;
   align-items: center;
   margin: 20px 0;
 }
